--- a/tests/lua-empty-test/project/CMakeLists.txt
+++ b/tests/lua-empty-test/project/CMakeLists.txt
@@ -139,7 +139,8 @@ elseif(COCOS_TARGET_SYSTEM_IOS)
 
     set_target_properties(${app_name} PROPERTIES
         MACOSX_BUNDLE_BUNDLE_NAME "${app_name}"
-        MACOSX_BUNDLE_BUNDLE_VERSION "${COCOS2D_X_VERSION}" MACOSX_BUNDLE_GUI_IDENTIFIER "org.cocos.$(PRODUCT_NAME)"
+        MACOSX_BUNDLE_BUNDLE_VERSION "${COCOS2D_X_VERSION}"
+        MACOSX_BUNDLE_GUI_IDENTIFIER "org.cocos.$(PRODUCT_NAME)"
         MACOSX_BUNDLE_ICON_FILE "Icon-57.png"
         MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_LIST_DIR}/proj.ios/InfoCMake.plist"
         MACOSX_BUNDLE_SHORT_VERSION_STRING "${COCOS2D_X_VERSION}"
