--- a/cocos/scripting/lua-bindings/proj.tizen/.project
+++ b/cocos/scripting/lua-bindings/proj.tizen/.project
@@ -7,6 +7,7 @@
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
+			<triggers>clean,full,incremental,</triggers>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -95,6 +96,42 @@
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-true-false-wsocket.c</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1426065422920</id>
+			<name>lua</name>
+			<type>9</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-lua</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1426065422967</id>
+			<name>lua</name>
+			<type>9</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-tolua</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1426065422983</id>
+			<name>lua</name>
+			<type>9</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-luasocket</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1426065452420</id>
+			<name>lua/lua</name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-lua.c</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
