--- a/tests/lua-empty-test/project/proj.tizen/.cproject
+++ b/tests/lua-empty-test/project/proj.tizen/.cproject
@@ -511,6 +511,7 @@
 									<listOptionValue builtIn="false" value="jpeg"/>
 									<listOptionValue builtIn="false" value="tiff"/>
 								</option>
+								<option id="gnu.cpp.link.option.flags.2142184820" superClass="gnu.cpp.link.option.flags" value="-static-libstdc++" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1366030862" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
