Modify cpp-default-template and js-default-template build pass on linux.

--- a/templates/lua-template-default/cocos-project-template.json
+++ b/templates/lua-template-default/cocos-project-template.json
@@ -8,6 +8,7 @@
         "project_replace_project_name": {
             "src_project_name": "HelloLua",
             "files": [
+                "frameworks/CMakeLists.txt",
                 "config.json",
                 ".project"
             ]
