--- a/tests/lua-empty-test/project/CMakeLists.txt
+++ b/tests/lua-empty-test/project/CMakeLists.txt
@@ -147,9 +147,11 @@ elseif(COCOS_TARGET_SYSTEM_IOS)
         )
 endif()
 
+#===============================================================================
+# Copy resources.
 if(XCODE_VERSION)
     # Nothing to do.
-elseif(MSVC_IDE)
+elseif(MSVC_IDE AND COCOS_TARGET_SYSTEM_WINDOWS)
     cocos_add_copy_depends_dll_command(${app_name})
 
     # Copy resource folders to WorkingDir(is $(ProjectDir) in VS).
