--- a/templates/lua-template-default/frameworks/CMakeLists.txt
+++ b/templates/lua-template-default/frameworks/CMakeLists.txt
@@ -24,7 +24,8 @@
 
 cmake_minimum_required(VERSION 3.1)
 
-set(app_name HelloLua)
+set(APP_NAME HelloLua)
+set(app_name ${APP_NAME})
 project(${app_name} VERSION 1.0.0)
 
 set(COCOS2D_ROOT ${CMAKE_SOURCE_DIR}/cocos2d-x)
