UserDefaultData based on ValueMap store
UserDefaultData stores user variables on ValueMap.
Get and Set is fast.
Loading data once, save on demand(use standart metod UserDefault::flush)
For call UserDefaultData::makeCurrentUserDefault() use on standart
UserDefault(Delegate UserDefault to new UserDefaultData )

Supports different ways to store( make you store based on
DataStoreDelegate, and set it UserDefaultData::setDataStoreDelegate)

Default data store based on standart UserDefault xml file, see
DataStoreXml in CCUserDefaultData.cpp

--- a/cocos/2d/libcocos2d.vcxproj
+++ b/cocos/2d/libcocos2d.vcxproj
@@ -435,6 +435,7 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClCompile Include="..\base\CCTouch.cpp" />
     <ClCompile Include="..\base\ccTypes.cpp" />
     <ClCompile Include="..\base\CCUserDefault.cpp" />
+    <ClCompile Include="..\base\CCUserDefaultData.cpp" />
     <ClCompile Include="..\base\ccUTF8.cpp" />
     <ClCompile Include="..\base\ccUtils.cpp" />
     <ClCompile Include="..\base\CCValue.cpp" />
@@ -974,6 +975,7 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClInclude Include="..\base\CCTouch.h" />
     <ClInclude Include="..\base\ccTypes.h" />
     <ClInclude Include="..\base\CCUserDefault.h" />
+    <ClInclude Include="..\base\CCUserDefaultData.h" />
     <ClInclude Include="..\base\ccUTF8.h" />
     <ClInclude Include="..\base\ccUtils.h" />
     <ClInclude Include="..\base\CCValue.h" />
