do not export getBoneCurves

--- a/tools/tolua/cocos2dx_3d.ini
+++ b/tools/tolua/cocos2dx_3d.ini
@@ -38,7 +38,7 @@ classes = Animate3D Sprite3D Animation3D Skeleton3D ^Mesh$ AttachNode BillBoard 
 skip = Mesh::[create getAABB getVertexBuffer hasVertexAttrib getSkin getMeshIndexData getGLProgramState getPrimitiveType getIndexCount getIndexFormat getIndexBuffer],
        Sprite3D::[getSkin getAABB getMeshArrayByName createAsync],
        Skeleton3D::[create],
-       Animation3D::[getBoneCurveByName],
+       Animation3D::[getBoneCurveByName getBoneCurves],
        BillBoard::[draw],
        Sprite3DCache::[addSprite3DData getSpriteData]
 
