--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule "tools/bindings-generator"]
-        path = tools/bindings-generator
-        url = https://github.com/cocos2d/bindings-generator.git
-[submodule "scripting/javascript/bindings/generated"]
-        path = scripting/javascript/bindings/generated
-        url = git://github.com/folecr/cocos2dx-autogen-bindings.git
+	path = tools/bindings-generator
+	url = https://github.com/cocos2d/bindings-generator.git
 [submodule "samples/Javascript/Shared"]
-        path = samples/Javascript/Shared
-        url = https://github.com/cocos2d/cocos2d-js-tests.git
+    path = samples/Javascript/Shared
+    url = https://github.com/cocos2d/cocos2d-js-tests.git
 [submodule "tools/cocos2d-console"]
-        path = tools/cocos2d-console
-        url = https://github.com/cocos2d/cocos2d-console.git
+    path = tools/cocos2d-console
+    url = https://github.com/cocos2d/cocos2d-console.git
 [submodule "plugin"]
-        path = plugin
-        url = https://github.com/cocos2d-x/plugin-x.git
-[submodule "samples/Cpp/TestCpp/Resources/ccs-res"]
-	path = samples/Cpp/TestCpp/Resources/ccs-res
-	url = https://github.com/dumganhar/ccs-res
+	path = plugin
+	url = https://github.com/cocos2d-x/plugin-x.git
+[submodule "cocos2dx/platform/third_party/winrt/angleproject"]
+	path = cocos2dx/platform/third_party/winrt/angleproject
+	url = https://github.com/stammen/angleproject
+[submodule "scripting/javascript/bindings/generated"]
+	path = scripting/javascript/bindings/generated
+	url = https://github.com/lumoslabs/cocos2dx-autogen-bindings
